--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "debug": "^3.1.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.0",
     "feathers": "^2.0.0",
     "istanbul": "^1.1.0-alpha.1",
